# Generated by Django 5.2.6 on 2025-09-19 09:38

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0001_initial'),
        ('organizations', '__first__'),
    ]

    operations = [
        migrations.CreateModel(
            name='Person',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('first_name', models.CharField(max_length=100)),
                ('last_name', models.CharField(max_length=100)),
                ('bio', models.TextField(blank=True, default='')),
                ('gender', models.CharField(blank=True, choices=[('M', 'Male'), ('F', 'Female'), ('O', 'Other'), ('N', 'Not specified')], default='N', max_length=1)),
                ('photo', models.ImageField(blank=True, null=True, upload_to='people/')),
                ('contact', models.OneToOneField(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, to='core.contact')),
                ('role', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='organizations.role')),
            ],
            options={
                'verbose_name': 'Person',
                'verbose_name_plural': 'People',
                'ordering': ['last_name', 'first_name'],
            },
        ),
        migrations.CreateModel(
            name='FPLMember',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('start_date', models.DateField()),
                ('active', models.BooleanField(default=True)),
                ('agreement', models.BooleanField(default=False)),
                ('leave_date', models.DateField(blank=True, null=True)),
                ('sim_returned', models.BooleanField(default=False)),
                ('account_closed', models.BooleanField(default=False)),
                ('certificate_issued', models.BooleanField(default=False)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('palika', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='fpl_members', to='core.palika')),
                ('person', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='fpl_member', to='people.person')),
            ],
        ),
        migrations.CreateModel(
            name='PersonEducation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('level', models.CharField(choices=[('SCHOOL', 'School (up to grade 10)'), ('PLUS_TWO', 'Plus 2 / Higher Secondary'), ('BA', "Bachelor's"), ('MA', "Master's"), ('PHD', 'Ph.D.'), ('OTHER', 'Other')], max_length=20, verbose_name='Highest education level')),
                ('institution', models.CharField(blank=True, default='', max_length=255, verbose_name='Institution of study')),
                ('field_of_study', models.CharField(blank=True, default='', max_length=255, verbose_name='Field of study')),
                ('is_current', models.BooleanField(default=False)),
                ('fpl_member', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='education', to='people.fplmember')),
            ],
            options={
                'verbose_name': 'Person Education',
                'ordering': ['fpl_member', 'level', 'is_current'],
            },
        ),
        migrations.CreateModel(
            name='PersonSensitiveData',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date_of_birth', models.DateField()),
                ('blood_type', models.CharField(choices=[('A+', 'A+'), ('A-', 'A-'), ('B+', 'B+'), ('B-', 'B-'), ('AB+', 'AB+'), ('AB-', 'AB-'), ('O+', 'O+'), ('O-', 'O-')], max_length=3)),
                ('_bank_account', models.BinaryField(blank=True, null=True)),
                ('_pan_number', models.BinaryField(blank=True, null=True)),
                ('fpl_member', models.OneToOneField(on_delete=django.db.models.deletion.PROTECT, to='people.fplmember')),
            ],
            options={
                'verbose_name': 'Person Sensitive Data',
                'ordering': ['blood_type', 'fpl_member'],
            },
        ),
        migrations.AddIndex(
            model_name='person',
            index=models.Index(fields=['first_name', 'last_name'], name='idx_person_name'),
        ),
        migrations.AddIndex(
            model_name='person',
            index=models.Index(fields=['role'], name='idx_person_role'),
        ),
        migrations.AddIndex(
            model_name='fplmember',
            index=models.Index(fields=['person'], name='idx_fpl_person'),
        ),
        migrations.AddIndex(
            model_name='fplmember',
            index=models.Index(fields=['palika'], name='idx_fpl_palika'),
        ),
        migrations.AddIndex(
            model_name='fplmember',
            index=models.Index(fields=['palika', 'active'], name='idx_palika_active'),
        ),
        migrations.AddIndex(
            model_name='personsensitivedata',
            index=models.Index(fields=['blood_type'], name='idx_blood_type'),
        ),
    ]
